@@ -21,5 +21,10 @@ h q[0];
 measure q[0] -> c0[0];
 measure q[1] -> c1[0];
 
+// classically controlled corrections 
 if(c1==1) x q[2];
 if(c0==1) z q[2];
+
+// u3 adjoint, final expected state should be |0>
+// u3^\dagger(a,b,c) = u3(-a,-c,-b)
+u3(-0.3,-0.1,-0.2) q[2]
